[KOGITO-2914] Review CompletableFuture usages in expl-core